# scrapbox-rag-local-llm

./: Makefile  README.md  README_RUN.md  architecture.md  compose.yml  last_lines.txt  suggest.md  suggest_ui.md
.github/: README.md  copilot-instructions.md
.github/agents/: backend-engineer.agent.md  es-expert.agent.md  frontend-architect.agent.md  leader.agent.md  ml-engineer.agent.md  ui-designer.agent.md
backend/: Dockerfile  Dockerfile.elasticsearch  README.md  encoder_app.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: ingest.py  search.py
backend/app/core/: config.py
backend/app/models/: scrapbox.py
backend/app/services/: elasticsearch_service.py  encoder_service.py  llm_service.py  scrapbox_service.py
backend/scripts/: import_scrapbox.py
backend/tests/: test_api.py  test_encoder_service.py  test_llm_service.py  test_scrapbox_service.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/chat/: ChatContainer.tsx  MessageBubble.tsx  SourceCard.tsx
frontend/src/components/input/: SearchInput.tsx
frontend/src/components/scrapbox/: ScrapboxRenderer.tsx
