[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "elasticsearch[async]<9.0.0",
    "loguru",
    "python-multipart",
    "torch",
    "transformers",
    "fugashi",
    "unidic-lite",
    "protobuf",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
